...
                        titleContentColor = PrimaryWhite
                    )
                )
            },
            bottomBar = {
                val bottomBarBtnText = when (screenState.application.status) {
                    ActivityStatus.CREATED -> "Взять в работу"
                    ActivityStatus.IN_WORK -> "Завершить обработку"
                    ActivityStatus.EVALUATION -> ""
                    ActivityStatus.COMPLETED -> ""
                    ActivityStatus.REJECTED -> ""
                    ActivityStatus.ASSIGNED -> ""
                }
...
