...

    private fun sendApplication(intent: QualificationExamIntent.SendApplication) {
        if (intent.hero != null) {
            viewModelScope.launch(Dispatchers.IO) {
                val application = QualificationExamApplication(
                    academyId = systemRepository.getUserId(),
                    hero = intent.hero
                )
                repository.sendQualificationExamApplication(application).collect {
                    when (it.status) {
                        Status.SUCCESS -> {
                            _screenState.value = _screenState.value.copy(
                                isLoading = false,
...
                    }
                }
            }
        } else {
            _screenState.value = _screenState.value.copy(
                isError = true,
                message = "Не выбран герой."
            )
        }
    }
}

