...
                            viewModel.processIntent(
                                QualificationExamIntent.SendApplication(
                                    hero = hero
                                )
                            )
                        },
                        text = "Подать заявление"
                    )
                }
            }
        }
    ) { paddingValues ->
        val pullRefreshState = rememberPullRefreshState(
...
