...
                        horizontalArrangement = Arrangement.SpaceEvenly
                    ) {
                        ConfirmButton(
                            onClick = {
                                viewModel.processIntent(LicenseTicketIntent.HandleApplication(true))
                            },
                            text = "Подтвердить"
                        )
                        PrimaryButton(
                            onClick = {
                                viewModel.processIntent(LicenseTicketIntent.HandleApplication(false))
                            },
                            text = "Отклонить"
                        )
                    }
                }
            }
        }
    ) { paddingValues ->
...
