...
                modifier = Modifier.fillMaxWidth(),
                alignment = Alignment.Center
            )

            HomeMenuNavItem(
                navClick = { navController.navigate(Screens.LicenseTickets.route) },
                text = "Заявки на лицензию"
            )
            HomeMenuNavItem(
                navClick = { navController.navigate(Screens.QualificationExamTickets.route) },
                text = "Заявки на квалификационный экзамен"
            )
            HomeMenuNavItem(
...
